--- a/src/country.css
+++ b/src/country.css
@@ -6,24 +6,36 @@
 
   .btn-back{
     background-color: var(--dark-blue-elements);
-    border:  2px solid var(--dark-blue-elements);
     color: var(--white);
-    padding: 5px;
+    font-weight: var(--font-semi-bold);
+    padding: 12px;
     text-decoration: none;
     border-radius: 0 4px 0 4px;
     display: inline-block;
     margin-bottom: 20px;
   }  
+  .btn-back:hover{
+    background-color: var(--very-dark-blue-background);
+    color: var(--white);
+    font-weight: var(--font-semi-bold);
+    box-shadow: 0 5px 20px hsla(200, 15%, 8%, 0.5)
+  } 
 
-  
+.country-inner img{
+    width: 100%;
+    height: 400px;
+    border: none;
+}
+
   .country article .country-details div {
-    margin: 30px 0;
+    margin: 50px 0;
     /* font-display: ; */
     display: inline-block;
     justify-content: space-between;
   }
   
   .country article .country-details div h2 {
+    margin-top: -40px;
     font-size: 30px;
     letter-spacing: 1px;
   }
@@ -32,7 +44,11 @@
     font-weight: 600;
     font-size: 18px;
     margin: 10px 0;
+    align-items:flex-start;
+   
   }
+
+
 
   .country article .country-details div h4 span {
     font-weight: 300;
